<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
   	<LinearLayout
		android:orientation="horizontal" 
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/weather_labels"
		android:padding="8dp"
	    android:gravity="center_vertical"
		>	
	
	   <TextView 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginRight="40dp"
		    android:textStyle="bold"
			android:text="@string/label_date"
		/>
	   
	   <TextView 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginRight="25dp"
		    android:textStyle="bold"
			android:text="@string/label_time"
	  />
		      
	  <TextView 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginRight="20dp"
		    android:textStyle="bold"
			android:text="@string/label_forecast"
	  />
		   
	  <TextView 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginRight="30dp"
		    android:textStyle="bold"
			android:text="@string/label_temperature"
	  />
	  <TextView 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textStyle="bold"
			android:text="@string/label_precipitation"
	  />
		  
	</LinearLayout>

	<LinearLayout
		android:orientation="horizontal" 
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="10dp"
	    android:gravity="center_vertical">
	  
    <TextView 
        android:id="@+id/date"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginRight="30dp"
	/>
    
    <TextView 
        android:id="@+id/time"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginRight="25dp"
	/>
       
    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="45dp"
    />
    
   <TextView 
        android:id="@+id/temperature"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginRight="40dp"
	/>
   <TextView 
        android:id="@+id/precipitation"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	/>

</LinearLayout>
</LinearLayout>